--- a/src/index.css
+++ b/src/index.css
@@ -16,19 +16,15 @@ img {
   width: 100%;
 }
 h2 {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   color: #7faaea;
   padding: 0;
   margin: 0;
 }
-h3 {
-  font-size: 1.3rem;
-  padding: 0;
-  margin: 0;
-}
+
 p {
-  font-size: 1.1rem;
-  color: #34283f;
+  font-size: 1.6rem;
+  color: #834db7;
   padding: 0;
   margin: 0;
 }
